[gd_scene load_steps=6 format=2]

[ext_resource path="res://gui/panel/panel.tscn" type="PackedScene" id=1]
[ext_resource path="res://fonts/Ubuntu-B.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://gui/button/button.tscn" type="PackedScene" id=3]
[ext_resource path="res://menus/how_to_play/tutorial_panel.gd" type="Script" id=4]

[sub_resource type="DynamicFont" id=1]
size = 20
font_data = ExtResource( 2 )

[node name="tutorial_panel" type="Node"]
script = ExtResource( 4 )

[node name="panel" parent="." instance=ExtResource( 1 )]
rect_min_size = Vector2( 600, 200 )

[node name="margin_container2" type="MarginContainer" parent="panel"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="panel/margin_container2"]
margin_left = 10.0
margin_top = 10.0
margin_right = 590.0
margin_bottom = 190.0
custom_constants/separation = 10

[node name="tutorial_text" type="Label" parent="panel/margin_container2/VBoxContainer"]
margin_right = 580.0
margin_bottom = 120.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 1 )
text = "Welcome!"
align = 1
valign = 1

[node name="HBoxContainer" type="HBoxContainer" parent="panel/margin_container2/VBoxContainer"]
margin_top = 130.0
margin_right = 580.0
margin_bottom = 180.0
custom_constants/separation = 10

[node name="previous_button" parent="panel/margin_container2/VBoxContainer/HBoxContainer" instance=ExtResource( 3 )]
margin_top = 0.0
margin_right = 186.0
margin_bottom = 50.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "< Previous"

[node name="main_menu_button" parent="panel/margin_container2/VBoxContainer/HBoxContainer" instance=ExtResource( 3 )]
margin_left = 196.0
margin_top = 0.0
margin_right = 383.0
margin_bottom = 50.0
rect_min_size = Vector2( 100, 50 )
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Main menu"

[node name="next_button" parent="panel/margin_container2/VBoxContainer/HBoxContainer" instance=ExtResource( 3 )]
margin_left = 393.0
margin_top = 0.0
margin_right = 580.0
margin_bottom = 50.0
size_flags_horizontal = 3
text = "Next >"

[connection signal="pressed" from="panel/margin_container2/VBoxContainer/HBoxContainer/previous_button" to="." method="_on_previous_button_pressed"]
[connection signal="pressed" from="panel/margin_container2/VBoxContainer/HBoxContainer/main_menu_button" to="." method="_on_main_menu_button_pressed"]
[connection signal="pressed" from="panel/margin_container2/VBoxContainer/HBoxContainer/next_button" to="." method="_on_next_button_pressed"]
